@@ -10,6 +10,7 @@ releases may be found in the file ChangeLog.txt.
 
 Bugs fixed in 3.15.03
 =====================
+[2509817] Control characters no longer sent via Autotype.
 [2481370] Can now create shortcut by right-mouse down dragging.
 
 Changes to Existing Features in 3.15.03
@@ -18,7 +19,8 @@ None.
 
 New Features for 3.15.03
 ========================
-None.
+[2509821] Support Group (\g), Title (\i) and Notes (\o, \onnn) fields
+via Autotype.
 
 Bugs fixed in 3.15.02
 =====================
